Sampling Subframes not working 2.8 #61432

Closed
opened 2019-02-11 23:48:15 +01:00 by Remi · 54 comments

System Information
Operating system: centos
Graphics card:1080 ti

Blender Version
Broken: 2.8 8b192e1a6a

Short description of error
the Sampling Subframes in the flow smoke object setting doent seems to have any effect

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).
c-reate a smoke domaine from a default cube

  • create a smoke flow object from a default cube
  • create 3 key frame in translation
  • bake different simulation in point cache with different Sampling Subframes does not change anything in the result Capture du 2019-02-11 17-43-38.png
**System Information** Operating system: centos Graphics card:1080 ti **Blender Version** Broken: 2.8 8b192e1a6a5f **Short description of error** the Sampling Subframes in the flow smoke object setting doent seems to have any effect **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). c-reate a smoke domaine from a default cube - create a smoke flow object from a default cube - create 3 key frame in translation - bake different simulation in point cache with different Sampling Subframes does not change anything in the result ![Capture du 2019-02-11 17-43-38.png](https://archive.blender.org/developer/F6583318/Capture_du_2019-02-11_17-43-38.png)
Author

Added subscriber: @rlarroque

Added subscriber: @rlarroque

#65840 was marked as duplicate of this issue

#65840 was marked as duplicate of this issue

#64357 was marked as duplicate of this issue

#64357 was marked as duplicate of this issue

#63420 was marked as duplicate of this issue

#63420 was marked as duplicate of this issue
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Please provide a simple .blend file that allows us to reproduce the bug more easily.

Please provide a simple .blend file that allows us to reproduce the bug more easily.
Author

smooktest.blend here is a simpla example from an animated object in blender

[smooktest.blend](https://archive.blender.org/developer/F6590255/smooktest.blend) here is a simpla example from an animated object in blender

Added subscriber: @SlyNine

Added subscriber: @SlyNine

Added subscribers: @finnb, @StephenSwaney

Added subscribers: @finnb, @StephenSwaney

I need this unbroken now. My smoke flow, in an animation that is important to me, travels extremely fast and leaves completely disjointed smoke puffs in its path. Why did it get set to low priority? Did you think it will be difficult to fix?

I need this unbroken now. My smoke flow, in an animation that is important to me, travels extremely fast and leaves completely disjointed smoke puffs in its path. Why did it get set to low priority? Did you think it will be difficult to fix?

Looks like this isn't a bug. I found the following in /source/blender/blenkernel/intern/smoke.c line 3027 (after about an hour of searching)


/* Disable substeps for now, since it results in numerical instability */
totalSubsteps = 1.0f;

Does the comment still apply?

If so, how severe is it? Would it be better to cap substeps at a value like 5 or 10, rather than just 1? How long is "for now"?

Also, if you are disabling a feature, shouldn't you do it in the UI and not the kernel? That way, users wouldn't expect it to work.

@JacquesLucke

Looks like this isn't a bug. I found the following in /source/blender/blenkernel/intern/smoke.c line 3027 (after about an hour of searching) ``` ``` ``` /* Disable substeps for now, since it results in numerical instability */ totalSubsteps = 1.0f; ``` Does the comment still apply? If so, how severe is it? Would it be better to cap substeps at a value like 5 or 10, rather than just 1? How long is "for now"? Also, if you are disabling a feature, shouldn't you do it in the UI and not the kernel? That way, users wouldn't expect it to work. @JacquesLucke

Added subscriber: @MrJoMo

Added subscriber: @MrJoMo

Any news on this? I'm also working on a simulation that requires subframe sampling and it would be great for this to work.

Any news on this? I'm also working on a simulation that requires subframe sampling and it would be great for this to work.

You can create a smoke sim in 2.79 and import it I believe. It's worth a try at least. The point data shouldn't care after it's already baked.

You can create a smoke sim in 2.79 and import it I believe. It's worth a try at least. The point data shouldn't care after it's already baked.

You are correct. It is possible to bring it from 2.79. That's what I'm doing now, but it's a much slower (and limited) workflow.

You are correct. It is possible to bring it from 2.79. That's what I'm doing now, but it's a much slower (and limited) workflow.

For me, I can't use 2.79 because the smoke flow object was created and edited in 2.8 only. The workflow would be a mess. Wouldn't it be better to remove the "totalSubsteps = 1.0f;" and let people use substeps at their own risk?

For me, I can't use 2.79 because the smoke flow object was created and edited in 2.8 only. The workflow would be a mess. Wouldn't it be better to remove the "totalSubsteps = 1.0f;" and let people use substeps at their own risk?

Actually, you were right SlyNine. I was able to append the the smoke objects from the 2.8 blend file, bake the simulation in 2.79, and import it back. Still, is this bug/kludge ever going to get fixed?

Actually, you were right SlyNine. I was able to append the the smoke objects from the 2.8 blend file, bake the simulation in 2.79, and import it back. Still, is this bug/kludge ever going to get fixed?

Added subscriber: @stuntman7545

Added subscriber: @stuntman7545

Added subscribers: @dfelinto, @brecht, @Ton

Added subscribers: @dfelinto, @brecht, @Ton

Hi @brecht and @JacquesLucke

I know the dev team is busy getting 2.8 ready for launch and I don't mean to nag you guys about this. But I'm a little worried this might have been forgotten. With the release candidate around the corner I would like to see this bug being addressed. As it is, it makes it pretty hard to use the smoke simulator in production with any kind of fast moving objects.

I know you are probably looking to replace the whole smoke simulator with the Mantaflow branch, but if that is not going to happen before the 2.8 release, then this should probably get at least back to how it worked in 2.79.

Would it help to bring this up to @dfelinto or @Ton attention? Do you need any more test files?
I'm not a developer, so I can't help much with the code, but I'm happy to help with anything else I can. Just let me know.

Hi @brecht and @JacquesLucke I know the dev team is busy getting 2.8 ready for launch and I don't mean to nag you guys about this. But I'm a little worried this might have been forgotten. With the release candidate around the corner I would like to see this bug being addressed. As it is, it makes it pretty hard to use the smoke simulator in production with any kind of fast moving objects. I know you are probably looking to replace the whole smoke simulator with the Mantaflow branch, but if that is not going to happen before the 2.8 release, then this should probably get at least back to how it worked in 2.79. Would it help to bring this up to @dfelinto or @Ton attention? Do you need any more test files? I'm not a developer, so I can't help much with the code, but I'm happy to help with anything else I can. Just let me know.

This is not going to be fixed for 2.80, sorry, there is no time for it.

This is not going to be fixed for 2.80, sorry, there is no time for it.

Thanks for the quick reply @brecht.

I understand we're so close to launch that it's too late to fix.
Would re-enabling the line @finnb mentioned be that unstable? (/source/blender/blenkernel/intern/smoke.c line 3027). It seemed to work in 2.79.

If not, I suggest the control being removed. As it is, we have a control in the flow options that doesn't do anything.

Thanks again for the all the great work on 2.8 and I look forward to seeing this bug fixed after the release so I can leave 2.79 behind.

Thanks for the quick reply @brecht. I understand we're so close to launch that it's too late to fix. Would re-enabling the line @finnb mentioned be that unstable? (/source/blender/blenkernel/intern/smoke.c line 3027). It seemed to work in 2.79. If not, I suggest the control being removed. As it is, we have a control in the flow options that doesn't do anything. Thanks again for the all the great work on 2.8 and I look forward to seeing this bug fixed after the release so I can leave 2.79 behind.

Any plans for this to be fixed before the final since the launch has been delayed with RC2?

Any plans for this to be fixed before the final since the launch has been delayed with RC2?

Added subscriber: @StephenHamacek

Added subscriber: @StephenHamacek

Glad to find this report, Having this issue on Mac OS 2.80, and also keen for a fix. Keep up the fine work!

Glad to find this report, Having this issue on Mac OS 2.80, and also keen for a fix. Keep up the fine work!

Added subscriber: @alexkoskos

Added subscriber: @alexkoskos

Subframes still not working

Blender 2.80.75

Subframes still not working Blender 2.80.75

Added subscriber: @Walles

Added subscriber: @Walles

From https://www.blendernation.com/2019/09/24/developer-meeting-notes-september-23-2019/:

Mantaflow is being worked on with 2.82 in mind

And Blender 2.82 is scheduled for February 13 2020 .

So FWIW February 13 would be the timeline for Mantaflow to come to the rescue here.

And I'm not suggesting either waiting or fixing, I just wanted to add this datapoint since Mantaflow was mentioned.

From https://www.blendernation.com/2019/09/24/developer-meeting-notes-september-23-2019/: > Mantaflow is being worked on with 2.82 in mind And Blender 2.82 is [scheduled for February 13 2020 ](https://developer.blender.org/project/view/89/). So FWIW February 13 would be the timeline for Mantaflow to come to the rescue here. And I'm not suggesting either waiting or fixing, I just wanted to add this datapoint since Mantaflow was mentioned.

Note also @finnb that the "Disable substeps for now" comment seems to be a red herring; it was in 2.79 as well...
https://developer.blender.org/rB1e13168183361e65e01c7613f094407780d0967e

... and @MrJoMo says above that 2.79 works.

Note also @finnb that the "Disable substeps for now" comment seems to be a red herring; it was in 2.79 as well... https://developer.blender.org/rB1e13168183361e65e01c7613f094407780d0967e ... and @MrJoMo says above that 2.79 works.

One workaround that I was able to use with vanilla 2.8 was to:

  • Up the global Frame Rate in the Output section from 24fps to 100fps.
  • Multiply smoke Dissolve Time by 4 (I don't have "Slow" checked, not sure how Slow would affect this).
  • Multiply the Smoke Cache End frame by 4.
  • Render image 73 rather than image 19 (I tried 19*4=76 first, but 73 just happened to look better than 76)

In my case I'm not after an animation, but just a still of the smoke after it has developed.

Not sure how this would work for somebody who wants an animation of the smoke as it moves.

One workaround that I was able to use with vanilla 2.8 was to: * Up the global Frame Rate in the Output section from 24fps to 100fps. * Multiply smoke Dissolve Time by 4 (I don't have "Slow" checked, not sure how Slow would affect this). * Multiply the Smoke Cache End frame by 4. * Render image 73 rather than image 19 (I tried 19*4=76 first, but 73 just happened to look better than 76) In my case I'm not after an animation, but just a still of the smoke after it has developed. Not sure how this would work for somebody who wants an animation of the smoke as it moves.

Question for the devs. Is there a reason why we can't revert back to 2.79's behaviour. I understand that there are some bugs in it, but for the most part it was working in 2.79. Now there's features we can't even use.
Can we just bring back the old behaviour, even with the bugs, until we get MantaFlow? Maybe it's set as an "experimental feature" .

Question for the devs. Is there a reason why we can't revert back to 2.79's behaviour. I understand that there are some bugs in it, but for the most part it was working in 2.79. Now there's features we can't even use. Can we just bring back the old behaviour, even with the bugs, until we get MantaFlow? Maybe it's set as an "experimental feature" .

Added subscriber: @AndrewPrice

Added subscriber: @AndrewPrice

Is there really no faster timeline for this?

Subframes are crucial for smoke simulations, which make them basically unusable until this is fixed.

Feb 2020 is a long time, and MantaFlow is such a complex project it could be delayed even further. There's no faster fix?

Is there really no faster timeline for this? Subframes are crucial for smoke simulations, which make them basically unusable until this is fixed. Feb 2020 is a long time, and MantaFlow is such a complex project it could be delayed even further. There's no faster fix?

Added subscriber: @vr_sebas

Added subscriber: @vr_sebas

This issue was referenced by 6c9178b183

This issue was referenced by 6c9178b183f5267e07a6c55497b6d496e468a709

Added subscriber: @sebbas

Added subscriber: @sebbas

Hi everyone! Dalai just showed me this task and I gave it a try. Found the problem and here is how it looks now:

#61432.png

The subframes had simply been disabled in the code. I am just going to push this to master since there's no way to make it worse.

Hi everyone! Dalai just showed me this task and I gave it a try. Found the problem and here is how it looks now: ![#61432.png](https://archive.blender.org/developer/F7798785/T61432.png) The subframes had simply been disabled in the code. I am just going to push this to master since there's no way to make it worse.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sebastián Barschkis self-assigned this 2019-10-09 15:04:23 +02:00

Thanks Sebastián. This is great! There's probably still some problems, but at least this makes the smoke simulator usable again until MantaFlow comes out.

Thanks Sebastián. This is great! There's probably still some problems, but at least this makes the smoke simulator usable again until MantaFlow comes out.

@sebbas, will this change be in 2.81?

@sebbas, will this change be in 2.81?

And for context, here's where it was disabled: https://developer.blender.org/rB4494be513ac455b106b2cb9be119136a58212cd1

Comment says:

Fix smoke to render in Cycles again.

Viewport caching seems still broken, though baking works.

Note that the disabling change contained a lot more changes than just the subframes disabling, so that comment may or may not be relevant in here.

And for context, here's where it was disabled: https://developer.blender.org/rB4494be513ac455b106b2cb9be119136a58212cd1 Comment says: > Fix smoke to render in Cycles again. > > Viewport caching seems still broken, though baking works. Note that the disabling change contained a lot more changes than just the subframes disabling, so that comment may or may not be relevant in here.

@Walles I would say so as today is still part of bcon2 (on master)

@Walles I would say so as today is still part of bcon2 (on master)

Awesome timing @sebbas :)

Awesome timing @sebbas :)

This is great! ? Thanks @sebbas

This is great! ? Thanks @sebbas

Now works great in 2.81, but not working when using particles for emitting smoke :(

Now works great in 2.81, but not working when using particles for emitting smoke :(

In #61432#793623, @alexkoskos wrote:
Now works great in 2.81, but not working when using particles for emitting smoke :(

Yes unfortunately the subframe sampling is still not working for particle systems emitting smoke. Still unusable as of right now.

Sucks because even the render preview of smoke and fire in Blender 2.8 looks so much better but this one issue makes me go back to 2.79 for simulation :(

> In #61432#793623, @alexkoskos wrote: > Now works great in 2.81, but not working when using particles for emitting smoke :( Yes unfortunately the subframe sampling is still not working for particle systems emitting smoke. Still unusable as of right now. Sucks because even the render preview of smoke and fire in Blender 2.8 looks so much better but this one issue makes me go back to 2.79 for simulation :(

Thanks for the quick fix on the smoke @sebbas.

But as others have said, the particle subframe sampling is still broken. Is this an easy fix?
blender_2019-10-22_16-15-26.png

Thanks for the quick fix on the smoke @sebbas. But as others have said, the particle subframe sampling is still broken. Is this an easy fix? ![blender_2019-10-22_16-15-26.png](https://archive.blender.org/developer/F7846316/blender_2019-10-22_16-15-26.png)

@AndrewPrice Yes, it was a fairly small fix. Just committed it and so it will be part of 2.81.

@AndrewPrice Yes, it was a fairly small fix. Just committed it and so it will be part of 2.81.

Added subscriber: @LujaRajbhandari

Added subscriber: @LujaRajbhandari

Particle subframe sampling is still broken in 2.81 when the emitter is parented to a moving object with the child of constraint. I guess its the constraint problem. Nonetheless, it should be fixed.

Particle subframe sampling is still broken in 2.81 when the emitter is parented to a moving object with the child of constraint. I guess its the constraint problem. Nonetheless, it should be fixed.

Added subscriber: @L0Lock

Added subscriber: @L0Lock

Broken on modifiers as of today. On 2.82 stable, even simple parents couldn't do it. I've tried to get it working with 2.83 daily builds for weeks, in which more situations do work, but it fails with modifiers, the most important one in my eyes being the armature modifier :

image.png

substeps_broken.blend

Broken on modifiers as of today. On 2.82 stable, even simple parents couldn't do it. I've tried to get it working with 2.83 daily builds for weeks, in which more situations do work, but it fails with modifiers, the most important one in my eyes being the armature modifier : ![image.png](https://archive.blender.org/developer/F8471349/image.png) [substeps_broken.blend](https://archive.blender.org/developer/F8471353/substeps_broken.blend)

Please make a new bug report, we don't reopen old reports.

Please make a new bug report, we don't reopen old reports.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
17 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61432
No description provided.