Fix T61432: Sampling Subframes not working 2.8

Uncommented subframe logic and added correct time getter function (with subframe part in frame) to subframe update function